Added contacts page.

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <li><a href="novelties.html">Новинки</a></li>
                 <li><a href="#assortment">!Ассортимент</a></li>
                 <li><a href="#create_soap">!Создать мыло</a></li>
-                <li><a href="#contacts">!Контакты</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
             </ul>
         </div>
         </nav>
