--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap">
-    <link rel="stylesheet" href="novelties_files/style.css">
+    <link rel="stylesheet" href="contacts_files/style.css">
     <title>BonitaVita</title>
 </head>
 <body>    
@@ -28,35 +28,17 @@
         </nav>
     </header>
     <div id="text-box">
-        <p>Новинки</p>
+        <p>Контакты</p>
     </div>
     <section id="content">
-
-        <div class="product-container">
-            <div class="image-wrapper">
-                <img src="about_files/images/soap1.jpg" alt="Soap Image">
-            </div>
-            <p><b>DEEP</b></p>
-            <p>10€</p>
+        <img src="contacts_files/images/Vita.jpg" alt="Vita Image">
+        <div>
+            <p>Виталия Роенко</p>
+            <p>Клайпеда, Литва</p>
+            <p>Тел: +37064700750</p>
+            <p>Инст: BonitaVita</p>
+            <p>bonitavita03@gmail.com</p>
         </div>
-        
-        <div class="product-container">
-            <div class="image-wrapper">
-                <img src="about_files/images/soap1.jpg" alt="Soap Image">
-            </div>
-            <p><b>DEEP</b></p>
-            <p>10€</p>
-        </div>
-        
-
-        <div class="product-container">
-            <div class="image-wrapper">
-                <img src="about_files/images/soap1.jpg" alt="Soap Image">
-            </div>
-            <p><b>DEEP</b></p>
-            <p>10€</p>
-        </div>
-
     </section>
 </body>
 </html>
