--- a/admin/add.html
+++ b/admin/add.html
@@ -18,10 +18,10 @@
         <nav>
           <div class="desktop-menu">
             <ul>
-                <li><a href="manage.html">Мыло</a></li>     
-                <li><a href="add.html">Добавить</a></li>
-                <li><a href="ingredients.html">Ингредиенты</a></li>
-                <li><a href="categories.html">Категории</a></li>
+                <li><a href="manage.php">Мыло</a></li>     
+                <li><a href="add.php">Добавить</a></li>
+                <li><a href="ingredients.php">Ингредиенты</a></li>
+                <li><a href="categories.php">Категории</a></li>
                 <li><a href="logout.php">Выйти</a></li>
             </ul>
         </div>
@@ -31,7 +31,7 @@
         <p>Добавить мыло</p>
     </div>
     <section id="content">
-        <form id="soapForm">
+        <form id="soapForm" action="vendor/add_soap.php" method="post">
             <label for="soapId">Номер:</label>
             <input type="text" id="soapId" name="soapId" required>
     
@@ -49,10 +49,10 @@
             <div id="file-names"></div>
 
             <hr><label for="ingredients">Ингредиенты</label>
-            <p>Не хватает ингредиентов?<br><a href="">Добавь здесь.</a></p>
+            <p>Не хватает ингредиентов?<br><a href="ingredients.php">Добавь здесь.</a></p>
 
             <hr><label for="categories">Категории</label>
-            <p>Нужна новая категория?<br><a href="">Добавь здесь.</a></p>
+            <p>Нужна новая категория?<br><a href="categories.php">Добавь здесь.</a></p>
     
             <hr><input type="checkbox" id="public" name="visibility" value="public">
             <label for="public">Добавить в "Новинки"</label>
