Restructured user perspective.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <nav>
           <div class="desktop-menu">
             <ul>
-                <li><a href="#">Главная</a></li>     
-                <li><a href="#novelties">Новинки</a></li>
-                <li><a href="#assortment">!Ассортимент</a></li>
-                <li><a href="#create_soap">!Создать мыло</a></li>
-                <li><a href="contacts">Контакты</a></li>
+                <li><a href="">Главная</a></li>     
+                <li><a href="novelties/index.php">Новинки</a></li>
+                <li><a href="assortment/index.php">Ассортимент</a></li>
+                <li><a href="create_soap/index.php">Создать мыло</a></li>
+                <li><a href="contacts/index.html">Контакты</a></li>
             </ul>
         </div>
         </nav>
