--- a/contacts/index.html
+++ b/contacts/index.html
@@ -18,10 +18,10 @@
         <nav>
           <div class="desktop-menu">
             <ul>
-                <li><a href="../index.html">Главная</a></li>     
-                <li><a href="novelties/index.php">Новинки</a></li>
-                <li><a href="assortment/index.php">Ассортимент</a></li>
-                <li><a href="create_soap/index.php">Создать мыло</a></li>
+                <li><a href="../">Главная</a></li>     
+                <li><a href="../novelties/">Новинки</a></li>
+                <li><a href="../assortment/">Ассортимент</a></li>
+                <li><a href="../create /">Создать мыло</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </div>
