--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap">
-    <link rel="stylesheet" href="about_files/style.css">
+    <link rel="stylesheet" href="index_files/style.css">
     <title>BonitaVita</title>
 </head>
 <body>    
@@ -19,10 +19,10 @@
           <div class="desktop-menu">
             <ul>
                 <li><a href="">Главная</a></li>     
-                <li><a href="novelties/index.php">Новинки</a></li>
-                <li><a href="assortment/index.php">Ассортимент</a></li>
-                <li><a href="create_soap/index.php">Создать мыло</a></li>
-                <li><a href="contacts/index.html">Контакты</a></li>
+                <li><a href="novelties/">Новинки</a></li>
+                <li><a href="assortment/">Ассортимент</a></li>
+                <li><a href="create/">Создать мыло</a></li>
+                <li><a href="contacts/">Контакты</a></li>
             </ul>
         </div>
         </nav>
