Added menu for mobile view.

--- a/index.html
+++ b/index.html
@@ -16,15 +16,25 @@
             </div>
         </div>
         <nav>
-          <div class="desktop-menu">
-            <ul>
-                <li><a href="">Главная</a></li>     
-                <li><a href="novelties/">Новинки</a></li>
-                <li><a href="assortment/">Ассортимент</a></li>
-                <li><a href="create/">Создать мыло</a></li>
-                <li><a href="contacts/">Контакты</a></li>
-            </ul>
-        </div>
+            <div class="desktop-menu">
+                <ul>
+                    <li><a href="">Главная</a></li>     
+                    <li><a href="novelties/">Новинки</a></li>
+                    <li><a href="assortment/">Ассортимент</a></li>
+                    <li><a href="create/">Создать мыло</a></li>
+                    <li><a href="contacts/">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="mobile-menu">
+                <button id="mobile-menu-button">&#9776; Меню</button>
+                <ul>
+                    <li><a href="">Главная</a></li>     
+                    <li><a href="novelties/">Новинки</a></li>
+                    <li><a href="assortment/">Ассортимент</a></li>
+                    <li><a href="create/">Создать мыло</a></li>
+                    <li><a href="contacts/">Контакты</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <div id="text-box">
@@ -32,9 +42,12 @@
     </div>
     <section id="content">
         <p>О нас</p>
-        <img src="about_files/images/soap1.jpg" alt="Soap Image">
+        <img src="index_files/images/soap1.jpg" alt="Soap Image">
         <p>Натуральное мыло ручной работы</p>
         <p>BonitaVita - производит мыло из натуральных, органический продуктов. Главная особенность данного магазина - вы можете сами придумать дизайн своего мыла или выбрать из представленных вариантов. Прекрасная возможность полностью изучить состав каждого продукта и учесть все тонкости.  Мыло - это искусство и мы хотим подарить это искусство каждому!</p>
     </section>
+
+    <script src="index_files/script.js"></script>
+
 </body>
 </html>
