--- a/contacts/index.html
+++ b/contacts/index.html
@@ -10,28 +10,38 @@
 <body>    
     <header id="menu">
         <div class="logo">
-            <img src="general_images/logo.png" alt="Logo">
+            <img src="../images/logo.png" alt="Logo">
             <div class="site-info">
                 <p>BonitaVita</p>
             </div>
         </div>
         <nav>
-          <div class="desktop-menu">
-            <ul>
-                <li><a href="../">Главная</a></li>     
-                <li><a href="../novelties/">Новинки</a></li>
-                <li><a href="../assortment/">Ассортимент</a></li>
-                <li><a href="../create/">Создать мыло</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </div>
+            <div class="desktop-menu">
+                <ul>
+                    <li><a href="../">Главная</a></li>     
+                    <li><a href="../novelties/">Новинки</a></li>
+                    <li><a href="../assortment/">Ассортимент</a></li>
+                    <li><a href="../create/">Создать мыло</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="mobile-menu">
+                <button id="mobile-menu-button">&#9776; Меню</button>
+                <ul>
+                    <li><a href="../">Главная</a></li>     
+                    <li><a href="../novelties/">Новинки</a></li>
+                    <li><a href="../assortment/">Ассортимент</a></li>
+                    <li><a href="../create/">Создать мыло</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <div id="text-box">
         <p>Контакты</p>
     </div>
     <section id="content">
-        <img src="contacts_files/images/Vita.jpg" alt="Vita Image">
+        <img src="../images/Vita.jpg" alt="Vita Image">
         <div>
             <p>Виталия Роенко</p>
             <p>Клайпеда, Литва</p>
@@ -40,5 +50,8 @@
             <p>bonitavita03@gmail.com</p>
         </div>
     </section>
+
+    <script src="contacts_files/script.js"></script>
+
 </body>
 </html>
