Added bottom icons.

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -46,8 +46,8 @@
             <p>Виталия Роенко</p>
             <p>Клайпеда, Литва</p>
             <p>Тел: +37064700750</p>
-            <p>Инст: BonitaVita</p>
-            <p>bonitavita03@gmail.com</p>
+            <p>Инст: <a href="https://instagram.com/_bonitavita_" target="_blank">BonitaVita</a></p>
+            <p>Email: <a href="mailto:bonitavita03@gmail.com">bonitavita03@gmail.com</a></p>
         </div>
     </section>
 
