--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
         <p>BonitaVita - производит мыло из натуральных, органических продуктов. Главная особенность данного магазина - вы можете сами придумать дизайн своего мыла или выбрать из представленных вариантов. Прекрасная возможность полностью изучить состав каждого продукта и учесть все тонкости.  Мыло - это искусство и мы хотим подарить это искусство каждому!</p>
     </section>
 
+    <section id="social-links">
+        <a href="https://www.instagram.com/_bonitavita_" target="_blank">
+            <img src="images/inst-icon.png" alt="Instagram" class="social-icon">
+        </a>
+        <a href="mailto:bonitavita03@gmail.com">
+            <img src="images/mail-icon.png" alt="Mail" class="social-icon">
+        </a>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
