--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                     <li><a href="assortment/">Ассортимент</a></li>
                     <li><a href="create/">Создать мыло</a></li>
                     <li><a href="contacts/">Контакты</a></li>
+                    <li class="language-switch">
+                        <a onclick="toggleLanguageMenu()">🪐</a>
+                        <ul class="language-menu" id="language-menu">
+                            <li><a href="../ru/">Русский</a></li>
+                            <li><a href="../lt/">Lietuvių</a></li>
+                            <li><a href="../en/">English</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div class="mobile-menu">
@@ -35,6 +43,11 @@
                     <li><a href="assortment/">Ассортимент</a></li>
                     <li><a href="create/">Создать мыло</a></li>
                     <li><a href="contacts/">Контакты</a></li>
+                    <li>
+                        <a href="../ru/" style="margin-right: 10px;">RU</a>
+                        <a href="../lt/" style="margin-right: 10px;">LT</a>
+                        <a href="../en/" style="margin-right: 10px;">EN</a>
+                    </li>                    
                 </ul>
             </div>
         </nav>
@@ -81,5 +94,13 @@
             });
         });
     </script>
+
+    <script>
+        function toggleLanguageMenu() {
+            var languageMenu = document.getElementById("language-menu");
+            languageMenu.style.display = (languageMenu.style.display === "block") ? "none" : "block";
+        }
+    </script>
+
 </body>
 </html>
