Language choosing section updated.

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -22,7 +22,17 @@
                     <li><a href="../novelties/">Новинки</a></li>
                     <li><a href="../assortment/">Ассортимент</a></li>
                     <li><a href="../create/">Создать мыло</a></li>
-                    <li><a href="">Контакты</a></li>
+                    <li><a href="../contacts/">Контакты</a></li>
+                    <li class="language-switch">
+                        <a onclick="toggleLanguageMenu()">
+                            <img src="../images/lang-icon.png" alt="Language">
+                        </a>
+                        <ul class="language-menu" id="language-menu">
+                            <li><a href="../ru/">Русский</a></li>
+                            <li><a href="../lt/">Lietuvių</a></li>
+                            <li><a href="../en/">English</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div class="mobile-menu">
@@ -32,7 +42,12 @@
                     <li><a href="../novelties/">Новинки</a></li>
                     <li><a href="../assortment/">Ассортимент</a></li>
                     <li><a href="../create/">Создать мыло</a></li>
-                    <li><a href="">Контакты</a></li>
+                    <li><a href="../contacts/">Контакты</a></li>
+                    <li>
+                        <a href="../ru/" style="margin-right: 10px;">RU</a>
+                        <a href="../lt/" style="margin-right: 10px;">LT</a>
+                        <a href="../en/" style="margin-right: 10px;">EN</a>
+                    </li>                    
                 </ul>
             </div>
         </nav>
@@ -52,6 +67,13 @@
     </section>
 
     <script src="contacts_files/script.js"></script>
+
+    <script>
+        function toggleLanguageMenu() {
+            var languageMenu = document.getElementById("language-menu");
+            languageMenu.style.display = (languageMenu.style.display === "block") ? "none" : "block";
+        }
+    </script>
 
 </body>
 </html>
