--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                     <li><a href="create/">Создать мыло</a></li>
                     <li><a href="contacts/">Контакты</a></li>
                     <li class="language-switch">
-                        <a onclick="toggleLanguageMenu()">🪐</a>
+                        <a onclick="toggleLanguageMenu()">
+                            <img src="images/lang-icon.png" alt="Language">
+                        </a>
                         <ul class="language-menu" id="language-menu">
                             <li><a href="../ru/">Русский</a></li>
                             <li><a href="../lt/">Lietuvių</a></li>
