--- a/ru/contacts/index.html
+++ b/ru/contacts/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../../images/logo.png" type="logo">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap">
-    <link rel="stylesheet" href="contacts_files/style.css">
+    <link rel="stylesheet" href="../../files/style.css">
+    <link rel="stylesheet" href="../../files/contacts_files/style.css">
     <title>BonitaVita</title>
 </head>
 <body>    
     <header id="menu">
         <div class="logo">
-            <img src="../images/logo.png" alt="Logo">
+            <img src="../../images/logo.png" alt="Logo">
             <div class="site-info">
                 <p>BonitaVita</p>
             </div>
@@ -25,12 +27,12 @@
                     <li><a href="../contacts/">Контакты</a></li>
                     <li class="language-switch">
                         <a onclick="toggleLanguageMenu()">
-                            <img src="../images/lang-icon.png" alt="Language">
+                            <img src="../../images/lang-icon.png" alt="Language">
                         </a>
                         <ul class="language-menu" id="language-menu">
-                            <li><a href="../ru/">Русский</a></li>
-                            <li><a href="../lt/">Lietuvių</a></li>
-                            <li><a href="../en/">English</a></li>
+                            <li><a href="../../ru/contacts/">Русский</a></li>
+                            <li><a href="../../lt/contacts/">Lietuvių</a></li>
+                            <li><a href="../../en/contacts/">English</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -44,9 +46,9 @@
                     <li><a href="../create/">Создать мыло</a></li>
                     <li><a href="../contacts/">Контакты</a></li>
                     <li>
-                        <a href="../ru/" style="margin-right: 10px;">RU</a>
-                        <a href="../lt/" style="margin-right: 10px;">LT</a>
-                        <a href="../en/" style="margin-right: 10px;">EN</a>
+                        <a href="../../ru/contacts/" style="margin-right: 10px;">RU</a>
+                        <a href="../../lt/contacts/" style="margin-right: 10px;">LT</a>
+                        <a href="../../en/contacts/" style="margin-right: 10px;">EN</a>
                     </li>                    
                 </ul>
             </div>
@@ -56,7 +58,7 @@
         <p>Контакты</p>
     </div>
     <section id="content">
-        <img src="../images/Vita.jpg" alt="Vita Image">
+        <img src="../../images/Vita.jpg" alt="Vita Image">
         <div>
             <p>Виталия Роенко</p>
             <p>Клайпеда, Литва</p>
@@ -66,7 +68,7 @@
         </div>
     </section>
 
-    <script src="contacts_files/script.js"></script>
+    <script src="../../files/script.js"></script>
 
     <script>
         function toggleLanguageMenu() {
