--- a/ru/index.html
+++ b/ru/index.html
@@ -90,7 +90,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-    <script src="../files/index_files/script.js"></script>
+    <script src="../files/script.js"></script>
 
     <script>
         $(document).ready(function(){
