Novelties page updated.

--- a/ru/contacts/index.html
+++ b/ru/contacts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,6 +57,9 @@
     <div id="text-box">
         <p>Контакты</p>
     </div>
+
+    <!-- Main content section begin. -->
+
     <section id="content">
         <img src="../../images/Vita.jpg" alt="Vita Image">
         <div>
@@ -67,6 +70,8 @@
             <p>Email: <a href="mailto:bonitavita03@gmail.com">bonitavita03@gmail.com</a></p>
         </div>
     </section>
+
+    <!-- Main content section end. -->
 
     <script src="../../files/script.js"></script>
 
