Added another languages indexes and updated create page.

--- a/ru/contacts/index.html
+++ b/ru/contacts/index.html
@@ -67,7 +67,7 @@
             <p>Клайпеда, Литва</p>
             <p>Тел: +37064700750</p>
             <p>Инст: <a href="https://instagram.com/_bonitavita_" target="_blank">BonitaVita</a></p>
-            <p>Email: <a href="mailto:bonitavita03@gmail.com">bonitavita03@gmail.com</a></p>
+            <p>Email: <a href="mailto:info@bonitavita.lt">info@bonitavita.lt</a></p>
         </div>
     </section>
 
