Added sale functionality.

--- a/ru/index.html
+++ b/ru/index.html
@@ -65,12 +65,16 @@
     <section id="content">
         <p>О нас</p>
         <div class="image-carousel">
-            <img class="carousel-image" src="../images/soap_images/1A.jpg" alt="Soap Image 1">
-            <img class="carousel-image" src="../images/soap_images/2A.jpg" alt="Soap Image 2">
-            <img class="carousel-image" src="../images/soap_images/3A.jpg" alt="Soap Image 3">
-            <img class="carousel-image" src="../images/soap_images/4A.jpg" alt="Soap Image 4">
-            <img class="carousel-image" src="../images/soap_images/5A.jpg" alt="Soap Image 5">
-            <img class="carousel-image" src="../images/soap_images/6A.jpg" alt="Soap Image 6">
+            <img class="carousel-image" src="../images/shopWindow/1.jpg" alt="Image 1">
+            <img class="carousel-image" src="../images/shopWindow/2.jpg" alt="Image 2">
+            <img class="carousel-image" src="../images/shopWindow/3.jpg" alt="Image 3">
+            <img class="carousel-image" src="../images/shopWindow/4.jpg" alt="Image 4">
+            <img class="carousel-image" src="../images/shopWindow/5.jpg" alt="Image 5">
+            <img class="carousel-image" src="../images/shopWindow/6.jpg" alt="Image 6">
+            <img class="carousel-image" src="../images/shopWindow/7.jpg" alt="Image 7">
+            <img class="carousel-image" src="../images/shopWindow/8.jpg" alt="Image 8">
+            <img class="carousel-image" src="../images/shopWindow/9.jpg" alt="Image 9">
+            <img class="carousel-image" src="../images/shopWindow/10.jpg" alt="Image 10">
         </div>
         <p>Натуральное мыло ручной работы</p>
         <p>BonitaVita - производит мыло из натуральных, органических продуктов. Главная особенность данного магазина - вы можете сами придумать дизайн своего мыла или выбрать из представленных вариантов. Прекрасная возможность полностью изучить состав каждого продукта и учесть все тонкости.  Мыло - это искусство и мы хотим подарить это искусство каждому!</p>
